[gd_scene load_steps=7 format=3 uid="uid://cduitbid2yqlr"]

[ext_resource type="PackedScene" uid="uid://covniifh0ij4j" path="res://scenes/ui/card_menu_ui.tscn" id="1_5f13n"]
[ext_resource type="Script" path="res://scenes/ui/card_rewards.gd" id="1_j4gc8"]
[ext_resource type="Resource" uid="uid://btxc1odh1jmst" path="res://characters/warrior/cards/sdl1common.tres" id="2_8bko0"]
[ext_resource type="Resource" uid="uid://n3va254ct6b3" path="res://characters/warrior/cards/asr_sdl3_duplicatetest.tres" id="3_ndhnc"]
[ext_resource type="Resource" uid="uid://cgte4s6aec68k" path="res://characters/warrior/cards/sdl5rare.tres" id="4_2jsvp"]
[ext_resource type="Texture2D" uid="uid://bmqma01c44vqi" path="res://scenes/ui/pixil-frame-0 (8).png" id="6_uma51"]

[node name="CardRewards" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.666667)
script = ExtResource("1_j4gc8")
rewards = Array[Resource("res://custom_resources/card.gd")]([ExtResource("2_8bko0"), ExtResource("3_ndhnc"), ExtResource("4_2jsvp")])

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -123.0
offset_top = -31.0
offset_right = 89.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.14375, 1.17935)
theme_override_constants/separation = 15
alignment = 1

[node name="Cards" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 2

[node name="CardMenuUI" parent="VBoxContainer/Cards" instance=ExtResource("1_5f13n")]
layout_mode = 2

[node name="CardMenuUI7" parent="VBoxContainer/Cards" instance=ExtResource("1_5f13n")]
layout_mode = 2

[node name="CardMenuUI2" parent="VBoxContainer/Cards" instance=ExtResource("1_5f13n")]
layout_mode = 2

[node name="CardMenuUI3" parent="VBoxContainer/Cards" instance=ExtResource("1_5f13n")]
layout_mode = 2

[node name="CardMenuUI4" parent="VBoxContainer/Cards" instance=ExtResource("1_5f13n")]
layout_mode = 2

[node name="CardMenuUI5" parent="VBoxContainer/Cards" instance=ExtResource("1_5f13n")]
layout_mode = 2

[node name="CardMenuUI6" parent="VBoxContainer/Cards" instance=ExtResource("1_5f13n")]
visible = false
layout_mode = 2

[node name="CardMenuUI8" parent="VBoxContainer/Cards" instance=ExtResource("1_5f13n")]
visible = false
layout_mode = 2

[node name="CardMenuUI9" parent="VBoxContainer/Cards" instance=ExtResource("1_5f13n")]
visible = false
layout_mode = 2

[node name="SkipCardReward" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 14)
layout_mode = 2
size_flags_horizontal = 4
text = "Skip"

[node name="BackgroundNineRect" type="NinePatchRect" parent="VBoxContainer/SkipCardReward"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_uma51")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="TooltipPopup" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="TooltipPopup"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.298039, 0.129412, 0.2, 0.784314)

[node name="VBoxContainer" type="VBoxContainer" parent="TooltipPopup"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -35.0
offset_right = 75.0
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2

[node name="TooltipCard" type="CenterContainer" parent="TooltipPopup/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="CardMenuUI" parent="TooltipPopup/VBoxContainer/TooltipCard" instance=ExtResource("1_5f13n")]
layout_mode = 2

[node name="CardDescription" type="RichTextLabel" parent="TooltipPopup/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
mouse_filter = 2
theme_override_constants/line_separation = 3
bbcode_enabled = true
text = "Card description Card description Card description Card description Card description"
fit_content = true
scroll_active = false

[node name="TakeButton" type="Button" parent="TooltipPopup/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 12)
layout_mode = 2
size_flags_horizontal = 4
text = "Take"

[node name="BackgroundNineRect" type="NinePatchRect" parent="TooltipPopup/VBoxContainer/TakeButton"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_uma51")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 2.0
offset_right = 84.0
offset_bottom = 49.0
theme_override_font_sizes/font_size = 4
text = "Denk dran: Nicht jede SDL Practice macht zu jedem Zeitpunkt Sinn. Lies die jeweiligen Sprintbeschreibungen vorsichtig!"
autowrap_mode = 3

[node name="BackgroundNineRect" type="NinePatchRect" parent="Label"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -2.0
offset_right = -7.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_uma51")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[connection signal="gui_input" from="TooltipPopup" to="." method="_on_tooltip_popup_gui_input"]
